fix: change gap

--- a/vr_club_site/templates/site/style/booking.css
+++ b/vr_club_site/templates/site/style/booking.css
@@ -92,7 +92,7 @@
 }
 
 .people-count-2 {
-    gap: 125px;
+    gap: 124px;
     display: flex;
     flex-direction: row;
     align-items: center;
